--- a/card/pom.xml
+++ b/card/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.card</groupId>
 	<artifactId>card</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>card</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
