--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.loans</groupId>
 	<artifactId>loans</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>loans</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
